# kotatsu

./: .gcloudignore  .gitignore  README.md  app.yaml  cron.yaml  horimiya.json  pyproject.toml  requirements.txt  run.py  slackbot_settings.py
cron/: anniversary.py  dokkaiahen.py
kotatsu/: album.py  anniversary.py  app.py  book.py  dialogue.py  money.py  response.py  restaurant.py  utils.py  wiki.py
kotatsu/cron/: anniversary.py  dokkaiahen.py
tests/cron/: test_anniversary.py
