[tool.poetry]
name = "kotatsu"
version = "0.1.0"
description = ""
authors = ["amaotone <amane.suzu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
slack-bolt = "^1.14.3"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
